<resources>
    <string name="app_name">Soccer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_setting">Setting</string>

    <string name="england">England</string>
    <string name="italy">Italy</string>
    <string name="spain">Spain</string>

    <string name="title_favourite">Favourite</string>
</resources>
