<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="false"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:checkable="false"
            android:icon="@drawable/ic_favourite_black"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_setting"
            android:checkable="false"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>
