<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_england"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:tag="4328"
        android:text="@string/england"
        app:drawableStartCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/tv_italy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:tag="4332"
        android:text="@string/italy"
        app:drawableStartCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/tv_spain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:tag="4335"
        android:text="@string/spain"
        app:drawableStartCompat="@drawable/ic_home" />

</LinearLayout>